--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -223,9 +223,9 @@ jobs:
       - name: Install the AppImage bundler and Performous deps
         id: fetch_deps
         run: |
-          sudo apt install flatpak
-          flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
-          flatpak install flathub org.freedesktop.Platform//21.08 org.freedesktop.Sdk//21.08
+          sudo apt install flatpak flatpak-builder
+          sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+          sudo flatpak install -y --noninteractive flathub org.freedesktop.Platform//21.08 org.freedesktop.Sdk//21.08
 
       - name: Checkout Git
         id: checkout_git
