--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -229,12 +229,17 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: performous
+      - name: Dump Github Context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
 
       - uses: bilelmoussaoui/flatpak-github-actions/flatpak-builder@v4
         with:
           bundle: performous.flatpak
           manifest-path: performous/org.Performous.Performous.yml
           cache-key: flatpak-builder-${{ hashFiles('performous/org.Performous.Performous.yml') }}
+          branch: ${{ github.event.pull_request.head.ref }}
 
       #- name: Build Flatpak
       #  id: build_flatpak
